Fixed some code smells in FlatFileDatabaseHandler
These code smells were fixed according to sonarcloud analytics